[gd_scene load_steps=18 format=3 uid="uid://r5f5n67eg4l4"]

[ext_resource type="Texture2D" uid="uid://cvwn7pwfvemfr" path="res://classes/entity/passive/goonie/goonie_flap.png" id="1"]
[ext_resource type="Script" path="res://classes/ride_area.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://drat0agloi4wd" path="res://classes/entity/passive/goonie/goonie_swoop.png" id="6"]
[ext_resource type="Script" path="res://classes/entity/passive/goonie/goonie.gd" id="9"]
[ext_resource type="Script" path="res://classes/zone/safety_net/safety_net.gd" id="10"]
[ext_resource type="Script" path="res://classes/dejitter_group/dejitter_group.gd" id="11"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(24, 2)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(24, 14)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("1")
region = Rect2(0, 0, 43, 44)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("1")
region = Rect2(43, 0, 43, 44)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("1")
region = Rect2(86, 0, 43, 44)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("1")
region = Rect2(129, 0, 43, 44)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("1")
region = Rect2(172, 0, 43, 44)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("1")
region = Rect2(215, 0, 43, 44)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("1")
region = Rect2(258, 0, 43, 44)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": true,
"name": &"flap",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"swoop",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(24, 6)

[node name="Goonie" type="StaticBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource("9")

[node name="RideArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20
input_pickable = false
monitorable = false
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RideArea"]
position = Vector2(0, -8)
shape = SubResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")
one_way_collision = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(0, -2)
sprite_frames = SubResource("3")
animation = &"flap"
script = ExtResource("11")

[node name="SafetyNet" type="Area2D" parent="."]
position = Vector2(0, -4)
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource("10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafetyNet"]
shape = SubResource("4")

[connection signal="body_exited" from="RideArea" to="." method="_on_RideArea_body_exited"]
[connection signal="body_entered" from="SafetyNet" to="SafetyNet" method="_on_SafetyNet_body_entered"]
[connection signal="body_exited" from="SafetyNet" to="SafetyNet" method="_on_SafetyNet_body_exited"]
